--- a/Fourth/mysite/forms/templates/forms/index.html
+++ b/Fourth/mysite/forms/templates/forms/index.html
@@ -22,48 +22,5 @@
 {% csrf_token %}
 <button id="search">查询</button>
 </body>
-
-<script>
-        // using jQuery
-    function getCookie(name) {
-        var cookieValue = null;
-        if (document.cookie && document.cookie !== '') {
-            var cookies = document.cookie.split(';');
-            for (var i = 0; i < cookies.length; i++) {
-                var cookie = jQuery.trim(cookies[i]);
-                // Does this cookie string begin with the name we want?
-                if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                    break;
-                }
-            }
-        }
-        return cookieValue;
-    }
-    var csrftoken = getCookie('csrftoken');
-
-    function csrfSafeMethod(method) {
-        // these HTTP methods do not require CSRF protection
-        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-    }
-    $.ajaxSetup({
-        beforeSend: function(xhr, settings) {
-            if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                xhr.setRequestHeader("X-CSRFToken", csrftoken);
-            }
-        }
-    });
-
-    $('#search').click(function () {
-        $.ajax({
-            url: '/index/list/',
-            type: 'POST',
-            data: {'shop': '湖南'},
-            dataType: 'json',
-            success: function (data) {
-                console.log(data)
-            }
-        })
-    })
-</script>
+<script src="{% static 'forms/js/index.js' %}"></script>
 </html>
